Make seperate build command for ci so we don't build things twice

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "build-all": "npm-run-posix-or-windows build-all:task",
     "build-all:task": "yarn build-launcher & yarn build-cli & yarn build-extension & yarn build-viewer & wait",
     "build-all:task:windows": "yarn build-launcher && yarn build-cli && yarn build-extension && yarn build-viewer",
+    "build-ci": "npm-run-posix-or-windows build-ci:task",
+    "build-ci:task": "yarn build-extension & yarn build-viewer & wait",
+    "build-ci:task:windows": "yarn build-extension && yarn build-viewer",
     "build-cli": "cd ./lighthouse-cli && yarn build",
     "build-launcher": "cd ./chrome-launcher && yarn build",
     "build-extension": "cd ./lighthouse-extension && yarn build",
