--- a/.travis.yml
+++ b/.travis.yml
@@ -25,14 +25,18 @@ script: "echo \"do nothing\""
 jobs:
   include:
     - stage: prepare cache
-      script: yarn build-all
+      script:
+        - yarn build-ci
       node_js: "6.9.1"
     - node_js: "7"
-      script: yarn build-all
+      script:
+        - yarn build-ci
     - node_js: "8"
-      script: yarn build-all
+      script:
+        - yarn build-ci
     - stage: unit tests
-      install: skip
+      install:
+        - echo "using cache"
       script:
         - yarn bundlesize
         - yarn test-cli-formatting
