--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_install:
 install:
   # stop travis when PR and not node 6.9.1
   - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ] && [ "$TRAVIS_NODE_VERSION" != "6.9.1" ]; then travis_terminate 0; fi'
-  - yarn run install-all:task
+  - yarn run install-all:task:windows
   - 'if [ ! -d "${HOME}/google-cloud-sdk/bin" ]; then rm -rf ${HOME}/google-cloud-sdk; curl https://sdk.cloud.google.com | bash; fi'
 script: "echo \"do nothing\""
 jobs:
