Test cache name without -

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ jobs:
         - LINT=true
         - SMOKE=true
         - UNIT=true
-        - CACHE_NAME=node-${TRAVIS_NODE_VERSION}
+        - CACHE_NAME=node${TRAVIS_NODE_VERSION}
       script:
         - chmod +x travis/install_gcloud.sh
         - travis_wait ./travis/install_gcloud.sh
@@ -53,7 +53,7 @@ jobs:
       install: skip
       env:
         - LINT=true
-        - CACHE_NAME=node-${TRAVIS_NODE_VERSION}
+        - CACHE_NAME=node${TRAVIS_NODE_VERSION}
       script:
         - source ${HOME}/google-cloud-sdk/path.bash.inc
         - gcloud auth activate-service-account --key-file gcloud-credentials.json
@@ -75,34 +75,34 @@ jobs:
     - <<: *tests
       env:
         - UNIT=true
-        - CACHE_NAME=node-${TRAVIS_NODE_VERSION}
+        - CACHE_NAME=node${TRAVIS_NODE_VERSION}
     - <<: *tests
       env:
         - SMOKE=true
-        - CACHE_NAME=node-${TRAVIS_NODE_VERSION}
+        - CACHE_NAME=node${TRAVIS_NODE_VERSION}
     - <<: *tests
       node_js: "7"
     - <<: *tests
       env:
         - UNIT=true
-        - CACHE_NAME=node-${TRAVIS_NODE_VERSION}
+        - CACHE_NAME=node${TRAVIS_NODE_VERSION}
       node_js: "7"
     - <<: *tests
       env:
         - SMOKE=true
-        - CACHE_NAME=node-${TRAVIS_NODE_VERSION}
+        - CACHE_NAME=node${TRAVIS_NODE_VERSION}
       node_js: "7"
     - <<: *tests
       node_js: "8"
     - <<: *tests
       env:
         - UNIT=true
-        - CACHE_NAME=node-${TRAVIS_NODE_VERSION}
+        - CACHE_NAME=node${TRAVIS_NODE_VERSION}
       node_js: "8"
     - <<: *tests
       env:
         - SMOKE=true
-        - CACHE_NAME=node-${TRAVIS_NODE_VERSION}
+        - CACHE_NAME=node${TRAVIS_NODE_VERSION}
       node_js: "8"
 
 before_cache:
